OO-8232: done button dependent from read-only state